# events_radar_gt

./: .env.example  .gitignore  README.md
.beads/: .migration-hint-ts
api/: database.py  ingest.py  main.py  pyproject.toml
scrapers/: __init__.py  __main__.py  base.py  cli.py  models.py  pyproject.toml
scrapers/sources/: __init__.py  cityguideny.py  dice.py  donyc.py  edmtrain.py  eventbrite.py  garysguide.py  meetup.py  nyc_arts.py  nyc_parks.py  ohmyrockness.py  resident_advisor.py  the_skint.py  ticketmaster.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  api.ts  index.css  types.ts
