[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "events-radar-api"
version = "0.1.0"
description = "NYC Events Radar - FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "aiosqlite>=0.20",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
