[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "events-radar-scrapers"
version = "0.1.0"
description = "NYC Events Radar - scrapers"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
